# ml_sports

./: pyproject.toml
ml_sports/: 1_count_reps.ipynb  2_excersice_detector.ipynb  Body Language Decoder Tutorial.ipynb  body_language.pkl
