[tool.poetry]
name = "ml_sports"
version = "0.1.0"
description = ""
authors = ["Jan Ciepiela <jciepiela@minte.ai>"]

[tool.poetry.dependencies]
python = "^3.8"
mediapipe = "^0.8.11"
opencv-python = "^4.6.0"
pandas = "^1.5.1"
scikit-learn = "^1.1.3"

[tool.poetry.dev-dependencies]
ipykernel = "^6.17.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
